--- a/frontend/src/pages/taskboard/Board.css
+++ b/frontend/src/pages/taskboard/Board.css
@@ -13,7 +13,7 @@
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 4px;
-  background-color: #4B5563;
+  background-color: #4b5563;
   color: white;
   cursor: pointer;
   font-weight: 500;
@@ -26,6 +26,7 @@
 
 .title {
   color: #45a049;
+  text-align: center;
 }
 .board {
   width: 100%;
@@ -39,7 +40,7 @@
   position: absolute;
   top: 20px;
   left: 20px;
-  z-index: 1000;
+  z-index: 1;
 }
 
 .task-input input {
