--- a/frontend/src/components/Navbar/Navbar.css
+++ b/frontend/src/components/Navbar/Navbar.css
@@ -5,18 +5,24 @@
   position: sticky;
   width: 100%;
   top: 0;
-  z-index: 1000;
+  z-index: 998;
 }
 
 .nav-content {
-  max-width: 1200px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
+.logo-img {
+  height: 38px;
+}
+
 .logo {
+  display: flex;
+  align-items: center;
+  gap: 8px;
   font-size: 1.5rem;
   font-weight: bold;
   color: #22c55e;
