--- a/frontend/src/pages/ProjectDashboard/ProjectDashboard.css
+++ b/frontend/src/pages/ProjectDashboard/ProjectDashboard.css
@@ -256,14 +256,19 @@ select option {
   color: #374151;
   background-color: white;
 }
-.loading {
-  text-align: center;
+
+.loading-container,
+.error-container {
   padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 16px;
+  justify-content: center;
+  height: calc(100vh - 70px);
 }
 
 .error-container {
-  text-align: center;
-  padding: 2rem;
   color: red;
 }
 
@@ -292,7 +297,7 @@ select option {
   background-color: #eeeeee;
   color: #616161;
 }
-.descp{
+.descp {
   width: 400px;
   height: 200px;
 }
